Update and rename comunicazione.md to 2.comunicazione.md

--- a/2.comunicazione.md
+++ b/2.comunicazione.md
@@ -2,7 +2,7 @@
 layout: page
 title: "Prenota un'attività"
 order: 2
-permalink: /comunicazione/
+permalink: /2.comunicazione/
 ---
 ## Istruzioni per la prenotazione
 
