--- a/6.contatti.md
+++ b/6.contatti.md
@@ -2,7 +2,7 @@
 layout: page
 title: "Contatti"
 order: 6
-permalink: /contatti/
+permalink: /6.contatti/
 ---
 
 Puoi trovarmi su [Twitter](https://twitter.com/FedeDat) (attualmente X) e [LinkedIn](https://www.linkedin.com/in/federico-dattila/).  
